'Thought break' formatting, and other things.

--- a/Cory_Doctorow_-_Makers.tex
+++ b/Cory_Doctorow_-_Makers.tex
@@ -1,16 +1,35 @@
 \documentclass[a4paper]{book}
 
+\renewcommand{\chaptername}{}
+\renewcommand{\thechapter}{}
+
+\newcommand*\thoughtbreak{
+  \begin{center}
+    \vspace{1cm}
+	\noindent\rule{0.5\textwidth}{0.4pt}
+    \vspace{1cm}
+  \end{center}
+}
+
 \title{Makers}
-\author{Cory Doctorow \texttt{doctorow@craphound.com}}
-\date{24 January 2012}
+
+\author{Cory Doctorow}
+\date{}
 
 \begin{document}
 \maketitle
 
-\begin{centering}
-Tor Books: 978-0765312792 \\
+\thispagestyle{empty}
+\vspace{0.3\textheight}
+\begin{center} \small
+Cory Doctorow \texttt{doctorow@craphound.com}
+
+Tor Books: 978-0765312792
+
 HarperCollins UK/Voyager: 978-0007325221
-\end{centering}
+
+Last modified 24 January 2012
+\end{center}
 
 \tableofcontents
 
@@ -90,7 +109,7 @@ Some rules of the road:
 It's kind of a tradition around here that my readers convert my ebooks 
 to their favorite formats and send them to me here, and it's one that I 
 love! If you've converted these files to another format, send them to me
-(\texttt{doctorow@craphound.com}, subject Makers Conversion)
+(\texttt{doctorow@craphound.com}, subject `Makers Conversion')
 and I'll host them, but before you do, make sure you read the following:
 
 \begin{itemize}
@@ -115,7 +134,7 @@ format that has a DRM option, make sure it's switched off.
 
 \end{itemize}
 
-\chapter[]{A word to professors, librarians, and people who want to donate money to me}
+\chapter[Donations]{A word to professors, librarians, and people who want to donate money to me}
 
 Every time I put a book online for free, I get emails from readers who 
 want to send me donations for the book. I appreciate their generous 
@@ -197,7 +216,7 @@ For ``the risk-takers, the doers, the makers of things.''
 
 \mainmatter
 
-\chapter{Part I}
+\chapter[Part I]{Part I}
 
 Suzanne Church almost never had to bother with the blue blazer these 
 days. Back at the height of the dot-boom, she'd put on her business 
@@ -728,7 +747,7 @@ tweets from the press-conference, before she was able to lull herself to
 sleep. As she nodded off, she thought that Kettlewell's insomnia was as
 contagious as his excitement.
 
-\hrule
+\thoughtbreak
 
 Hollywood, Florida's biggest junkyard was situated in the rubble of a 
 half-built ghost-mall off Taft Street. Suzanne's Miami airport rental 
@@ -1346,7 +1365,7 @@ drill, and she was practically the only scribbler she knew who hewed to
 it: some of the whores on the Silicon Valley papers took in free 
 computers, trips, even spa days!---but she had never wavered.
 
-\hrule
+\thoughtbreak
 
 The afternoon passed quickly and enchantingly. Perry was working on a 
 knee-high, articulated Frankenstein monster built out of hand-painted 
@@ -2247,7 +2266,7 @@ coffin was expensive. She'd need to get a condo or something. A place
 with a kitchen where she could prep meals. She figured that Perry's 
 building would probably have a vacancy or two.
 
-\hrule
+\thoughtbreak
 
 The second business that Tjan took Perry into was even more successful 
 than the first, and that was saying something. It only took a week for 
@@ -3387,7 +3406,7 @@ her, the first man she'd done anything like share a bed with in at least
  a year. The last thing she remembered was the ten thousand foot bell 
 going off and then she slipped away into sleep.
 
-\hrule
+\thoughtbreak
 
 :: Perry thought that they'd sell a million Home Awares in six \\
 :: months. Lester thought he was nuts, that number was too high. \\
@@ -4068,7 +4087,7 @@ had moved in had put five years on him. His tan was fading, the wrinkles
 
 ``I'll come along and write down what he says,'' she said. ``That usually helps.''
 
-\hrule
+\thoughtbreak
 
 :: Kodacell is supposed to be a new way of doing business.  \\
 :: Decentralized, net-savvy, really twenty-first century. The \\
@@ -4476,7 +4495,7 @@ on her computer's keyboard all the way home as Lester drove them,
 squeezing the bridge of his nose to stay awake. She didn't even take her
  clothes off before collapsing into bed.
 
-\hrule
+\thoughtbreak
 
 ``They need the tools to make any other tools,'' is what Perry said when 
 he returned from the hospital, the side of his head still swaddled in 
@@ -4571,7 +4590,7 @@ There was a girl there by the afternoon. The next day, there were two
 more. They seemed like quick studies, despite their youth and their 
 lip-gloss. Suzanne approved.
 
-\hrule
+\thoughtbreak
 
 Lester stayed long enough to see the first prototype printer-printers 
 running, then he lit out with a duffel bag jammed into the back of his 
@@ -4670,7 +4689,7 @@ woodenly at first, then with genuine warmth. ``I will be back, you know,''
 
 She kissed him firmly on the cheek and stepped out the door and into her car and drove to Miami International.
 
-\hrule
+\thoughtbreak
 
 Tjan met her at Logan and took her bag. ``I'm surprised you had the time 
 to meet me,'' she said. The months had been good to him, slimming down 
@@ -4754,7 +4773,7 @@ She boiled all the way to her room and when she came over hungry, she
 ordered in room service, not wanting to take the chance that Rat-Toothed
  Freddy would still be in the lobby.
 
-\hrule
+\thoughtbreak
 
 Tjan met her as she was finishing her coffee in the breakfast room. She hadn't seen Freddy yet.
 
@@ -4826,7 +4845,7 @@ made this happen for you, OK?''
 
 Ick. Suzanne gave her another perfunctory hug and got the hell out of Dodge.
 
-\hrule
+\thoughtbreak
 
 ``What's with the jungle-gym?'' It really had been something, fun and Martian-looking.
 
@@ -5141,7 +5160,7 @@ And then he was gone. She sat on the edge of her bed and waited for
 tears, but they didn't come. So she picked up her laptop and started to 
 work through her mountain of email.
 
-\hrule
+\thoughtbreak
 When she saw him again, he was coming down the drive leading to the 
 shantytown and the factory. She was having tea in the tea-room that had 
 opened in a corkscrew spire high above the rest of the shantytown. The 
@@ -5251,7 +5270,7 @@ was your oyster if you could stomach a little risk.
 make time in Petrograd. Let me go send some email and get you set up. 
 You book a ticket.''
 
-\hrule
+\thoughtbreak
 And just like that she was off to Russia. Lester insisted that she buy a
  business-class ticket, and she discovered to her bemusement that 
 British Airways had about three classes above business, presumably with 
@@ -6042,7 +6061,7 @@ It was hot and muggy and Sammy was tired, and the drive back to Orlando
 was another five hours if the traffic was against him---and these days, 
 everything was against him.
 
-\hrule
+\thoughtbreak
 Perry's funny eyebrow twitched as he counted out the day's take. This 
 gig was all cream, all profit. His overheads amounted to a couple 
 hundred a month to Jason and his crew to help with the robot and 
@@ -6580,7 +6599,7 @@ Perry thought for a moment. Six squared? Six cubed? Log six? ``Six \emph{factori
 ``Genius is never appreciated.'' He scooped up a double-handful of brown 
 M\&Ms. ``In your face, Von Neumann! Let's see your precious ENIAC top \emph{this}!''
 
-\hrule
+\thoughtbreak
 A month later, Perry was clearing security at Miami International, 
 looking awkward in long trousers, closed-sole shoes, and a denim jacket.
  It was autumn in Boston, and he couldn't show up in flip-flops and a 
@@ -6787,7 +6806,7 @@ but for the most part, you get skeletons. Skeletons are good shit.''
 
 ``Fine,'' Perry said. ``Make money. But keep it to a minimum, OK?''
 
-\hrule
+\thoughtbreak
 The next time Perry turned up at Logan, it was colder than the inside of
  an icebox and shitting down grey snow with the consistency of frozen 
 custard.
@@ -6874,7 +6893,7 @@ that.''
 
 Perry stewed on that the rest of the way to Tjan's, staring at the sleet, hand resting against the icy window-glass.
 
-\hrule
+\thoughtbreak
 Sammy checked in to a Comfort Inn tucked into the thirty-seventh storey 
 of the Bank of America building in downtown Boston. The lobby was empty,
  the security-guard's desk unmanned. B of A was in receivership, and not
@@ -7216,7 +7235,7 @@ involved if there wasn't some serious money opportunity on the line.
 
 He'd seen the future that night and he had no place in it.
 
-\hrule
+\thoughtbreak
 It only took a week on the Boston ride before they had their third and 
 fourth nodes. The third was outside of San Francisco, in a gigantic 
 ghost-mall that was already being used as a flea-market. They had two 
@@ -7932,7 +7951,7 @@ anything or whom he'd wanted to mean anything. The closest he'd come had
  been---he sat up with a start and realized that the last woman he'd had 
 any strong feelings for had been Suzanne Church.
 
-\hrule
+\thoughtbreak
 Kettlewell emerged from New Work rich. He'd taken home large bonuses 
 every year that Kodacell had experienced growth---a better metric than 
 turning an actual ahem profit---and he'd invested in a diverse portfolio 
@@ -8209,7 +8228,7 @@ jet-lag was beating her up again, they'd both descended into their own
 personal funks. Suzanne went up to the guest room and put herself to 
 bed, not bothering to brush her teeth or even change into her nightie.
 
-\hrule
+\thoughtbreak
 Perry touched down in Miami in a near-coma, his eyes gummed shut by 
 several days' worth of hangovers chased by drink. Sleep deprivation made
  him uncoordinated, so he tripped twice deplaning, and his voice was a 
@@ -9384,7 +9403,7 @@ She went out the door like a flash and then stood in the street for a moment bef
 
 Uh-oh, Perry thought.
 
-\hrule
+\thoughtbreak
 Sammy didn't dare go back to the ride for weeks after the debacle in 
 Boston. He'd been spotted by the Chinese guy and the bummy-looking guy 
 who said he'd designed the ride, that much was sure. They probably 
@@ -9636,7 +9655,7 @@ just getting into the HR records to see who he'd have to lay off when
 they finally wound down and he sauntered out, giving his wolfy grin to 
 all, with a special flash of it for Wiener.
 
-\hrule
+\thoughtbreak
 ``Death, I'd like a word, please?''
 
 ``I'd be delighted.'' Death talked like someone who'd learned to talk by 
@@ -9703,7 +9722,7 @@ None of these people were stupid, not Wiener, not the kid, not the goths
 just---soft. Unwilling to make the hard choices. Sammy was good at hard 
 choices.
 
-\hrule
+\thoughtbreak
 Perry got home that night and walked in on Lester and Suzanne. They were
  tangled on the living-room carpet, mostly naked, and Lester blushed 
 right to his ass-cheeks when Perry came through the door.
@@ -9771,7 +9790,7 @@ When the food came, the two of them attacked it like hungry dogs. It was
  clear that they'd forgotten their embarrassment and were planning 
 another retreat to the bedroom once they'd refueled. Perry left.
 
-\hrule
+\thoughtbreak
 ``Hey, Francis.'' Francis was sitting on the second-storey balcony of his 
 mayoral house, surveying the electric glow of the shantytown. As usual 
 now, he was alone, without any of his old gang of boys hanging around 
@@ -9906,7 +9925,7 @@ hurry, but who knew?
  had a fresh bruise on his cheek with a couple of knuckle prints clearly
  visible. ``Can't wait to get back on the ride. It's been too long.''
 
-\hrule
+\thoughtbreak
 Sammy had been through a rehab and knew how they went. You laid off a 
 bunch of people in one fast, hard big bang. Hired some unemployment 
 coaches for the senior unionized employees, scheduled a couple of 
@@ -10037,7 +10056,7 @@ major bit of illegal activity, and he knew where he could find some
 hungry attack-lawyers who'd love to argue about it. He jumped on the 
 ride again and got his camera configured for low-light shooting.
 
-\hrule
+\thoughtbreak
 Eva showed up on Perry's doorstep that night after dinner. Lester and 
 Suzanne had gone off to the beach and Perry was alone, updating his 
 inventory of tchotchkes with a camera and an old computer, getting 
@@ -10904,7 +10923,7 @@ back and snagged another can of coffee and went to work on it. As the
 can hissed open, he couldn't help himself: he chuckled. Then he 
 laughed---a full, loud belly-laugh.
 
-\hrule
+\thoughtbreak
 Perry watched it happen as though it were all a dream: The crowds 
 thickening. The cops getting out of their cars and putting their hands 
 on their belts. A distant siren. More people milling around, hanging out
@@ -11020,7 +11039,7 @@ let the door crash open as two cops in riot-visors came through,
 pepper-spray at the fore. He was down on the ground, writhing and 
 clawing at his face in an instant, and the phone caught it all.
 
-\hrule
+\thoughtbreak
 All Perry wanted was for someone to cut the plastic cuffs off so he 
 could scrub at his eyes, though he knew that would only make it worse. 
 The riot-bus sounded like an orgy, moaning and groaning with dozens of 
@@ -11183,7 +11202,7 @@ he couldn't get to his feet fast enough. With a sickening \emph{crack},
  in his body, and then the pain was on him and he choked out a shout, 
 then a louder one, and then everything went dark.
 
-\hrule
+\thoughtbreak
 As it turned out, his prison infirmary time didn't last long at all. 
 Kettlewell had faded fast from the riot, headed back to the guesthouse 
 and got the lawyers on the phone. He'd shown them the stream off of 
@@ -11832,7 +11851,7 @@ beside her. ``And get those stinky clothes off before you do---I won't have
 
 He felt the foolish grin spread across his face and he skinned out of his clothes as fast as he could with his cast on.
 
-\hrule
+\thoughtbreak
 They didn't leave the house until suppertime, freshly showered (she'd 
 been a delightful help in scrubbing those spots where the cast impeded 
 access) and changed. Perry took a painkiller after the shower, which 
@@ -11944,7 +11963,7 @@ until she pushed him off, laughing even harder.
 
 Hilda gave his groin a friendly honk and then made a dash for it, and he gave chase.
 
-\hrule
+\thoughtbreak
 PHOTO: A Drunken Perry Gibbons Gets a How's Your Father From Ride-Bride Hilda Hammersen
 
 MADISON, WI: Say you managed to inspire some kind of ``movement'' of 
@@ -11994,7 +12013,7 @@ This organization needs to die before it gets someone killed.
 
 Comments? Write to Freddy at honestfred@techstink.co.uk
 
-\hrule
+\thoughtbreak
 Lester interrupted Suzanne's phone-call to break in and announce that 
 he'd run Rat-Toothed Freddy to ground: the reporter had caught the first
  flight from Madison to Chicago and then gone west to San Jose. The TSA 
@@ -12154,7 +12173,7 @@ stare at the grimy Hollywood palms, swimming pools and freeways.
 
 ``Something nasty and full of lies, no doubt.''
 
-\hrule
+\thoughtbreak
 Nerd Groupie Church Finds Fatkins Love with Ride Sidekick
 
 Sources close to the Hollywood, Florida ride-cult have revealed that 
@@ -12203,7 +12222,7 @@ accounts will certainly find a fresh batch of suckers---if there's one
 thing we know about Suzanne Church, it's that she knows how to separate a
  mark from his money.
 
-\hrule
+\thoughtbreak
 Lester ran the ride basically on his own that week, missing his workshop
  and his tinkering, thinking of Suzanne, wishing that Perry was back 
 already. He wasn't exactly a people person, and there were a \emph{lot} of people.
@@ -12377,7 +12396,7 @@ all. He stood stiffly up from his workbench and turned on his heel and
 walked out. He expected Suzanne to call out to him, but she didn't. He 
 didn't care, or at least he didn't want to.
 
-\hrule
+\thoughtbreak
 Sammy skipped three consecutive Theme-Leaders' meetings, despite 
 increasingly desperate requests for his presence. The legal team was 
 eating every spare moment he had, and he hadn't been able to get 
@@ -12514,7 +12533,7 @@ How can you tell if you've got the right fund? Come back next week, when
  we'll have a Q\&A with a litigation specialist at Credit 
 Suisse/First Boston.
 
-\hrule
+\thoughtbreak
 ``There's litigation specialists at Credit Suisse?''
 
 He was big, Hackelberg, though he often gave the impression of being 
@@ -12579,7 +12598,7 @@ makes space for lots of outlier contingencies.
 
 Sammy hadn't written down these email addresses. He'd committed them to memory.
 
-\hrule
+\thoughtbreak
 Death Waits was living the dream. He took people's money and directed 
 them to the ride's entrance, making them feel welcome, talking ride 
 trivia. Some of his pals spotted him at the desk and enviously demanded 
@@ -12819,7 +12838,7 @@ consciousness soon---he'd had no idea that pain could be this intense. But
  he didn't lose consciousness for a long, long time. And the pain could 
 be a lot more intense, as it turned out.
 
-\hrule
+\thoughtbreak
 Sammy didn't want the writer meeting him at his office. His organization
  had lots of people who'd been loyal to the old gothy park and even to 
 Death Waits. They plotted against him. They wrote about him on the 
@@ -13140,7 +13159,7 @@ again.
 
 ``Good night,'' he said, and headed for his car.
 
-\hrule
+\thoughtbreak
 Perry's cast \emph{stank}. It had started to go a little skunky on the
  second day, but after a week it was like he had a dead animal stuck to 
 his shoulder. A rotting dead animal. A rotting, itchy dead animal.
@@ -13259,7 +13278,7 @@ alongside of us. What could possibly go wrong?''
 
 ``It was rhetorical, goofball. It's also three in the morning. Sleep, for tomorrow we fly.''
 
-\hrule
+\thoughtbreak
 Lester didn't want to open the ride, but someone had to. Someone had to,
  and it wasn't Perry, who was off with his midwestern honey. Lester 
 would have loved to sleep in and spend the day in his workshop 
@@ -13559,7 +13578,7 @@ what it meant to be responsible for people's lives. When he stood up and
  wiped his face on the tail of his tight, glittering shirt, he was a 
 different person.
 
-\hrule
+\thoughtbreak
 Sweating in the suffocating afternoon heat, his re-casted arm on fire, 
 Hilda had shown him the article about Death Waits while they were being 
 screened for their connection at O'Hare. The TSA guy was swabbing his 
@@ -13754,7 +13773,7 @@ hands with Tjan and Kettlewell and tousled all four kids before lighting
  out for the ride, gasping out a breath as they stepped into the open 
 air.
 
-\hrule
+\thoughtbreak
 Death Waits regained consciousness several times over the next week, 
 aware each time that he was waking up in a hospital bed on a crowded 
 ward, that he'd woken here before, and that he hurt and couldn't 
@@ -13829,7 +13848,7 @@ before you know it.''
 
 Defeated, Death closed his eyes. ``Start,'' he said, his voice like something made from soft tar left too long in the sun.
 
-\hrule
+\thoughtbreak
 Sammy knew he was a dead man. The only thing keeping him alive was 
 legal's reluctance to read the net. Hackelberg had a couple of juniors 
 who kept watch-lists running on hot subjects, but they liked to print 
@@ -14037,7 +14056,7 @@ couldn't be that hard---those Wal-Mart ride assholes had published the
 full schematics for their toys already. He could just rip them off. 
 Turnabout is fair play, after all.
 
-\hrule
+\thoughtbreak
 Hilda left Perry after a couple hours working the ticket-booth together.
  She wanted to go for a shower and a bit of an explore, and it was a 
 secret relief to both of them to get some time apart after all that time
@@ -14231,7 +14250,7 @@ He smiled in spite of himself.
 
 ``Come on, sulkypants, let's go find Lester and he can call me 'Yoko' some more. That always cheers you up.''
 
-\hrule
+\thoughtbreak
 It was two weeks before Death Waits could sit up and prod at a keyboard 
 with his broken hands. Some of his pals brought a laptop around and they
  commandeered a spare dining tray to keep it on---Death's lap was in no 
@@ -14308,7 +14327,7 @@ Oh, it was wonderful. He was ruined, maybe forever, but it was wonderful. And he
 
 He went back to writing that message-board post. He'd be laid in that bed for a long time yet. He had time to rewrite.
 
-\hrule
+\thoughtbreak
 IF YOU CAN'T BEAT THEM, RIP THEM OFF
 
 A new initiative from the troubled Disney Parks corporation shows how a 
@@ -14353,7 +14372,7 @@ home-wares line, a disastrous fine-art chain, and oversaw the collapse
 of the collectible cel-art market. With ``visionaries'' like Page at the 
 helm, the company can't help but notch up more ``successes.''
 
-\hrule
+\thoughtbreak
 Death was deep into the story now. The Brazilians had forked off their 
 own ride---they'd had their own New Work culture, too, centered in the 
 favelas, so they had different stories to tell. Some of the ride 
@@ -14511,7 +14530,7 @@ able to get away from his body for a while again.
 
 He tried it.
 
-\hrule
+\thoughtbreak
 Hilda and Lester sat uncomfortably on the sofa next to each other. Perry
  had hoped they'd hit it off, but it was clear after Lester tried his 
 Yoko joke again that the chemistry wasn't there. Now they were having a 
@@ -14576,7 +14595,7 @@ hugged them good night and then they all went to bed, and Perry put his
 face into the hair at the back of Hilda's neck and told her he loved 
 her, and Hilda snuggled up to him and they fell asleep.
 
-\hrule
+\thoughtbreak
 A GAME OF CATCH
 
 Pop-quiz: Your empire is crumbling around your ears. Your supporters are hospitalized by jackboot thugs for sticking up for you.
@@ -14612,7 +14631,7 @@ leaders since he took his beating in their service.
 
 No doubt these three have more important things to do---like play catch.
 
-\hrule
+\thoughtbreak
 Suzanne said, ``Look, you can't let crazy people set your agenda. If you 
 want to visit this Death kid, you should. If you don't, you shouldn't. 
 But don't let Freddy psy-ops you into doing something you don't want to 
@@ -14834,7 +14853,7 @@ the shantytown. ``Kettlewell isn't going to like this,'' Suzanne said.
 
 ``Yeah, I expect not,'' Perry said. ``He can go fuck himself.''
 
-\hrule
+\thoughtbreak
 Imagineering sent the prototype up to Sammy as soon as it was ready, the
  actual engineers who'd been working on it shlepping it into his office.
 
@@ -14989,7 +15008,7 @@ and clean---it would extend the Parks' reach right into the living rooms
 of their customers, giving them a new reason to think of the Park every 
 day.
 
-\hrule
+\thoughtbreak
 Kettlewell and Tjan looked up when Perry banged through the door of the 
 tea-house they'd turned into their de facto headquarters.
 
@@ -15078,7 +15097,7 @@ have a smooth transition, but no more of this. Not on my head. Not on my
 
 He stalked away, which is what he should have done in the first place. Fuck being reasonable. Reasonable sucked.
 
-\hrule
+\thoughtbreak
 Death found out about the Disney-in-a-Box printers seconds after they 
 were announced. He'd been tuning his feed-watchers to give him news 
 about the Disney Parks for nearly a decade, and this little PR item on 
@@ -15227,7 +15246,7 @@ morning. Perry heard and said his goodbyes, like they were old pals
 who'd chatted too long, and Death Waits rang off and fell into a light 
 doze, grinning like a maniac.
 
-\hrule
+\thoughtbreak
 Hilda eyed Perry curiously. ``That sounded like an interesting 
 conversation,'' she said. She was wearing a long t-shirt of his that 
 didn't really cover much, and she looked delicious in it. It was all he 
@@ -15436,7 +15455,7 @@ He let go of Lester. Lester turned on his heel and walked back into his
 bedroom. Perry knew that that meant he'd won. He smiled at Hilda and 
 hugged her. She was a lot more fun to hug than Lester.
 
-\hrule
+\thoughtbreak
 Sammy was at his desk looking over the production prototype for the 
 Disney-in-a-Box (R) units that Imagineering had dropped off that morning
  when his phone rang. Not his desk phone---his cellular phone, with the 
@@ -15532,7 +15551,7 @@ worrying too much about what someone else was up to.
 
 ``Oh, and one other thing: it looks like the Death Waits kid is going to be discharged from the hospital this week.''
 
-\hrule
+\thoughtbreak
 He wasn't ready to leave the hospital. For starters, he couldn't walk 
 yet, and there were still times when he could barely remember where he 
 was, and there was the problem of the catheter. But the insurance 
@@ -15769,7 +15788,7 @@ of the ride and ran through them from different angles---facing backward
 and sideways, looking down and looking up, noting all the elements that 
 felt like \emph{story} and all the ones that didn't, wishing he had his plus-one/minus-one joystick with him to carve out the story he was seeing.
 
-\hrule
+\thoughtbreak
 Lester wouldn't work the ride anymore, so Perry took it on his own. 
 Hilda was in town buying groceries---his chest-freezer of gourmet surplus 
 food had blown its compressor and the contents had  spoiled in a mess of
@@ -15862,7 +15881,7 @@ They'd never named the ride. It had always been ``the ride.'' Not even a
 capital ``R.'' For a second, Perry wondered if they'd end up calling it 
 ``The Story'' in the end.
 
-\hrule
+\thoughtbreak
 Perry got his Disney-in-a-Box through a circuitous route, getting one of
  the hawkers' brothers to order it to a PO box in Miami, to which Perry 
 would drive down to pick it up and take it back.
@@ -16273,7 +16292,7 @@ drove in silence. He felt numb and wrung out and he didn't know what to
 say to her. He lay awake in bed that night waiting to hear Lester come 
 home, but he didn't.
 
-\hrule
+\thoughtbreak
 Sammy loved his morning meetings. They all came to his office, all the 
 different park execs, creatives, and emissaries from the old partner 
 companies that had spun off to make movies and merch and educational 
@@ -16438,7 +16457,7 @@ him, and she wore it well. ``Do I have breakfast plans? Sammy my boy, I'm
 
 ``Right,'' he said. They left the building and had an altogether lovely flight to Dallas. Very productive.
 
-\hrule
+\thoughtbreak
 Lester hadn't left Suzanne's apartment in days. She'd rented a place in 
 the shantytown---bemused at the idea of paying rent to a squatter, but 
 pleased to have a place of her own now that Lester and Perry's apartment
@@ -16775,7 +16794,7 @@ people had just come through a US Customs checkpoint and they were
 acting like the world was a fine place. She decided there must be 
 something to this Disney business.
 
-\hrule
+\thoughtbreak
 Death Waits waited, and waited and waited for the ride to come back 
 online. He split his days between hanging out at home, writing about the
  story, running the fly-throughs from the other rides, watching what was
@@ -16812,7 +16831,7 @@ Lacey yawned and woke and kissed him. ``Good morning, my handsome man,'' she sai
 
 ``Oh yes, please,'' he said, his voice breathy.
 
-\hrule
+\thoughtbreak
 The smell at the Wal-Mart was overpowering. It was one part sharp mold, 
 one part industrial disinfectant, a citrus smell that made your eyes 
 water and your sinuses burn.
@@ -17098,7 +17117,7 @@ Lacey looked daggers at his shoulders, then turned to help Death down
 the stairs. His canes clattered on the narrow staircase, and it was all 
 he could do to keep from crying.
 
-\hrule
+\thoughtbreak
 Suzanne rode the bullet-train from Miami airport in air-conditioned 
 amusement, watching the Mickey-shaped hang-straps rock back and forth. 
 She'd bought herself a Mickey waffle and a bucket-sized Diet Coke in the
@@ -17258,7 +17277,7 @@ determining whether she'd be good for dessert, then flew off.
 
 She began to write.
 
-\hrule
+\thoughtbreak
 Something had changed between Kettlewell and Eva since they'd left 
 Florida with the kids. It wasn't just the legal hassles, though there 
 were plenty of those. They'd gone to Florida with a second chance---a 
@@ -17584,7 +17603,7 @@ though his first impulse was to argue, he couldn't do it just then.
 So she left, and Kettlewell was alone in his nice apartment with his 
 phone and his computer and his lawsuits and his mind fizzing with ideas.
 
-\hrule
+\thoughtbreak
 The last thing Sammy wanted was a fight. Dinah's promo was making major 
 bank for the company---and he was taking more and more meetings in Texas 
 with Dinah, which was a hell of a perk. They'd shipped two million of 
@@ -17716,7 +17735,7 @@ He sat down at his computer. Someone had to do the competitive
 intelligence work around here and it looked like it would have to be 
 him.
 
-\hrule
+\thoughtbreak
 What the World Can Learn from Disney
 
 Suzanne Church
@@ -17820,7 +17839,7 @@ If you haven't been for a visit, you should. Honestly. Oh, by all means,
 bright side of what billions can do---the stuff you never get from outside
  the walls of this fortress of fun---buy a ticket.
 
-\hrule
+\thoughtbreak
 The barman at Suzanne's hotel started building her a Lapu-Lapu as she 
 came up the stairs. The drink involved a hollow pineapple, overproof 
 rum, and an umbrella, and she'd concluded that it contained the perfect 
@@ -18082,7 +18101,7 @@ of my favorite rides?''
 
 This surprised her a little, but when she thought about it, she couldn't see why not. ``Sure,'' she said.
 
-\hrule
+\thoughtbreak
 Taking a guest around Disney World was like programming a playlist for a
  date or a car-trip. Sammy had done it three or four times for people he
  was trying to win over (mostly women he was trying to screw) and he 
@@ -18269,7 +18288,7 @@ Suzanne surprised him by giving him a strong, warm hug. ``You're not the
 worst guy in the world, Sammy Page,'' she said. ``Thanks for showing me 
 around your park.''
 
-\hrule
+\thoughtbreak
 Kettlewell had been almost pathetic in his interest in helping Lester 
 out. Lester got the impression that he'd been sitting around his 
 apartment, moping, ever since Eva had taken the kids and gone. As Lester
@@ -18292,7 +18311,7 @@ Kettlewell sighed. ``What the hell am I going to do with you two?''
 
 ``Don't be sorry. Be happy. Someone should be happy around here.''
 
-\hrule
+\thoughtbreak
 Herve Guignol chaired the executive committee. Sammy had known him for 
 years. They'd come east together from San Jose, where Guignol had run 
 the entertainment side of eBay. They'd been recruited by Disney Parks at
@@ -18396,7 +18415,7 @@ the final analysis---''
 
 It was unanimous---except for Hackelberg.
 
-\hrule
+\thoughtbreak
 Sammy got his rematch with Hackelberg when the quarterly financials came out. It was all that black ink, making him giddy.
 
 ``I don't want to be disrespectful,'' he said, knowing that in 
@@ -18762,7 +18781,7 @@ days?''
 
 ``I'll pick you up at 6AM tomorrow. Beat the morning traffic.''
 
-\hrule
+\thoughtbreak
 Suzanne was getting sick of breakfast in bed. It was hard to imagine 
 that such a thing was possible, but there it was. Lester stole out from 
 between the covers before 7AM every day, and then, half an hour later, 
@@ -18864,7 +18883,7 @@ beautiful woman he'd ever loved, that he would do anything for her. That
 
 \emph{What the hell was I complaining about?} she thought as he fell on her like a starving man.
 
-\hrule
+\thoughtbreak
 She met Sammy in their favorite tea-room, the one perched up on a crow's
  nest four storeys up a corkscrew building whose supplies came up on a 
 series of dumbwaiters and winches that shrouded its balconies like 
@@ -19369,7 +19388,7 @@ conversation.
 
 She gave him a hug that seemed to go on forever.
 
-\hrule
+\thoughtbreak
 Sammy was glad he was driving. The mood Guignol was in, he'd have wrecked the car. ``That was \emph{not} the plan, Sammy,'' he said. ``The plan was to get the data, talk it over---''
 
 ``The first casualty of any battle is the battle-plan,'' Sammy said, 
@@ -19434,7 +19453,7 @@ part is going to be convincing them to sell.''
 
 Guignol slid the seat back so it was flat as a bed. ``Wake me when we hit Orlando.''
 
-\hrule
+\thoughtbreak
 
 It took IT three days to get Sammy his computer back. His secretary 
 managed as best as she could, but he wasn't able to do much without it.
@@ -19519,7 +19538,7 @@ people squirm. It's good journalism---shakes loose some new developments.''
 
 ``An hour, then.''
 
-\hrule
+\thoughtbreak
 Suzanne didn't knock on Lester's door. Lester would fall into place, once Perry was in.
 
 She found him working the ride, Hilda back in the maintenance bay, 
@@ -19633,7 +19652,7 @@ Hilda laughed too. Suzanne extended her hand to Perry and he shook it. Then she 
 
 ``Let's go find Lester.''
 
-\hrule
+\thoughtbreak
 By the time the call came, Sammy was ready to explode. He got in a golf 
 cart and headed to the Animal Kingdom Lodge, which backed onto the 
 safari park portion of the Animal Kingdom. He snuck himself onto the 
@@ -19670,7 +19689,7 @@ Freddy.''
 
 Sammy sat down on the roof. This was going to be a long conversation.
 
-\hrule
+\thoughtbreak
 Perry ground his teeth and squeezed his beer. The idea of doing this in a
  big group had seemed like a good idea. Dirty Max's was certainly full 
 of camaraderie, the smell of roasting meat and the chatter of nearly a 
@@ -19930,7 +19949,7 @@ in stoic silence, and once they were seated on the Chicago flight, he
 put his head down on Hilda's shoulder and she stroked his hair until he 
 fell asleep.
 
-\hrule
+\thoughtbreak
 Epilogue
 
 Lester was in his workshop when Perry came to see him. He had the yoga 
@@ -19961,7 +19980,7 @@ They stood facing one another for an uncomfortable moment, hands clasped
 
 Lester laughed and embraced his old friend, not seen or heard from these last 15 years.
 
-\hrule
+\thoughtbreak
 Lester's workshop had a sofa where he entertained visitors and took his 
 afternoon nap. Normally, he'd use his cane to cross from his workbench 
 to the sofa, but seeing Perry threw him for such a loop that he 
@@ -20206,7 +20225,7 @@ they no longer meshed.
 
 They were like gears, connected to one another and mismatched, clunking and skipping, but running still, running still.
 
-\hrule
+\thoughtbreak
 Perry and Lester rode in the back of the company car, the driver an old 
 Armenian who'd fled Azerbaijan, whom Lester introduced as Kapriel. It 
 seemed that Lester and Kapriel were old friends, which made sense, since
@@ -20344,7 +20363,7 @@ they arrived, Lester roused himself heavily, clutched his stomach, then
 raced for the house. Kapriel shook his head and rolled his eyes, then 
 showed Perry to the front door and shook his hand.
 
-\hrule
+\thoughtbreak
 In the morning, he prowled Lester and Suzanne's place like a burglar. 
 The guesthouse had once served as Lester's workshop and it had the 
 telltale leavings of a busy inventor---drawers and tubs of parts, a moldy 
@@ -20402,7 +20421,7 @@ mean I'm not bored.''
 
 ``I'm in.''
 
-\hrule
+\thoughtbreak
 Suzanne came home a week later and found them sitting up in the living 
 room. They'd pushed all the furniture up against the walls and covered 
 the floor with board-game boards, laid edge-to-edge or overlapping. They
@@ -20614,7 +20633,7 @@ He heaved a happy sigh. ``I love you, Suzanne Church.''
 
 ``You're a good man, Lester Banks.''
 
-\hrule
+\thoughtbreak
 Perry met them at the breakfast table the next morning as Suzanne was 
 fiddling with the espresso machine, steaming soy milk for her latte. He 
 wore a pair of Lester's sloppy drawstring pants and a t-shirt for a 
@@ -20658,7 +20677,7 @@ Florida, back in some forgotten time. He was thicker, but still solid,
 and he smelled the same. She put her lips close to his ear and 
 whispered, ``You're a good man, Perry Gibbons.''
 
-\hrule
+\thoughtbreak
 Lester gave his notice that morning. Though it was 8PM in Tehran when Lester called, Sammy was at his desk.
 
 ``Why are you telling me this, Lester?''
@@ -20718,7 +20737,7 @@ packets routing on it. ``Goodbye, Lester,'' Sammy said at length.
 
 Lester wanted to apologize. He wanted \emph{not} to want to apologize. He swallowed the apology and disconnected the line.
 
-\hrule
+\thoughtbreak
 When it was time for bed, Suzanne shut her lid and put the computer down
  beside the sofa. She stepped carefully around the pieces of the 
 Calvinball game that still covered the living room floor and stepped 
@@ -20844,6 +20863,7 @@ climbed into bed with her a few minutes later and spooned up against her
 
 She fell asleep almost instantly.
 
+\backmatter
 \chapter{Acknowledgements}
 
 Thanks to Andrew Leonard and Salon for publishing this when it was \emph{Themepunks}.
